# workshop

./: .gitignore  README.md
c++/: .gitignore  CMakeLists.txt
c++/01-cmake/: ReadMe.md  ReadMe.txt
c++/01-cmake/01-start/: CMakeLists.txt  hello.cpp
c++/01-cmake/02-vcpkg/: CMakeLists.txt  hello.cpp
c++/01-cmake/03-vs-llvm/: CMakeLists.txt  hello.cpp
c++/01-cmake/04-vs-llvm-vcpkg/: CMakeLists.txt  hello.cpp
c++/01-start-cmake/: CMakeLists.txt
c++/02-test-main/: test.cpp
c++/03-test-main/: CMakeLists.txt  test.cpp
c++/04-test-main-c/: .gitignore  CMakeLists.txt  README.md  client.py  clock.c  main.c
c++/102-modern-cpp-challenge/: CMakeLists.txt  TODO  main.cpp  p002003.cpp  p004.cpp  p004005.cpp  p006.cpp  p006007.cpp  p008.cpp  p009.cpp  p01.cpp  p010.cpp  p02.cpp  problems.h
c++/102-modern-cpp-challenge/lib/: math.cpp  math.h  measure.h  utils.cpp  utils.h
c++/11-tests-collection/cpp17/copy-elision/: CMakeLists.txt  NonMoveable.h  main.cpp
c++/17-modern-cpp-sandbox/: 01_std_span.h  02_alignment.h  03_polymorphism.h  CMakeLists.txt  main.cpp
c++/start-cmake/: ReadMe.txt
go/Basic/: hello.go
go/Basic/Tests/: test_cloture.go
go/Basic/Tour/: ex1_loops.go  ex2_slices.go  ex3_map.go  ex4_closure.go  ex5_errors.go  ex6_channels.go  ex6_channels_simple.go  ex6_channels_unsorted.go  ex7_concurrency.go  exercise-images.go  exercise-list.go  exercise-rot-reader.go  go.mod  go.sum  interfaces.go  tour_test.go
go/autoupdate_go/: go-tools.txt  update-go-tools.sh
haskell/: .gitignore  hello.hs  hello_io.hs
literature/: Dear diary.md  Skiena.md
literature/extra/physics/: cosmic-inflation.md
other/bat/: python64.bat
other/java/: test.java
python/: datetime_string.py
python/decorators/: decorators.standardize_telephone_numbers.py
scripts/certs/: ReadMe.txt  create-certs.sh
